# src/models/user.model.ts
@@ -3,19 +3,58 @@ import { encrypt } from "../utils/encryption";
 import { renderMailHtml, sendMail } from "../utils/mail/mail";
 import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 import { ROLES } from "../utils/constant";
+import * as Yup from "yup"
+
+const validatePassword = Yup.string()
+  .required()
+  .min(6, "Password must be at least 6 characters")
+  .test(
+    "at-least-one-uppercase-letter",
+    "Contains at least one uppercase letter",
+    (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*[A-Z])/;
+      return regex.test(value);
+    }
+  )
+  .test("at-least-one-number", "Contains at least one number", (value) => {
+    if (!value) return false;
+    const regex = /^(?=.*\d)/;
+    return regex.test(value);
+  });
+const validateConfirmPassword = Yup.string()
+  .required()
+  .oneOf([Yup.ref("password"), ""], "Password doesn't match");
 
 export const USER_MODEL_NAME = "User"
 
-export interface User {
-  fullName: string;
-  username: string;
-  email: string;
-  password: string;
-  role: string;
-  profilePicture: string;
+export const UserLoginDTO = Yup.object({
+  identifier: Yup.string().required("identifier is required"),
+  password: validatePassword,
+})
+
+export const userUpdatePasswordDTO = Yup.object({
+  oldPassword: validatePassword,
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword,
+})
+
+export const userDTO = Yup.object({
+  fullName: Yup.string().required("full name is required"),
+  username: Yup.string().required("username is required"),
+  email: Yup.string().required("email is required"),
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword,
+})
+
+export type TypeUser = Yup.InferType<typeof userDTO>;
+
+export interface User extends Omit<TypeUser, "confirmPassword"> {
   isActive: boolean;
   activationCode: string;
-  createdAt?: string
+  createdAt?: string;
+  profilePicture: string;
+  role: string;
 }
 
 const Schema = mongoose.Schema
